[package]
name = "PercentageTransferManager"
version = "2.1.0"
authors = ["Polymath Inc."]
edition = "2018"

[dependencies]
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_metadata", default-features = false, features = ["derive"], optional = true }
ink_primitives = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_primitives", default-features = false }
ink_core = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_core", default-features = false }
ink_lang = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_lang", default-features = false }
ink_prelude = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_prelude", default-features = false }


scale = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.2.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "PercentageTransferManager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib"
]

[features]
default = ["std"]
std = [
    "ink_lang/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_core/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
# overflow-checks = true

[workspace]
members = [
    ".ink/abi_gen"
]
# exclude = [
# 	".ink"
# ]
