[package]
name = "pallet-utility"
version = "0.1.0"
authors = ["Polymath"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }

codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8"  }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }

# Common
polymesh-common-utilities = { package = "polymesh-common-utilities", path = "../common", default-features = false }
polymesh-primitives = { package = "polymesh-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, rev = "a439a7aa5a9a3df2a42d9b25ea04288d3a0866e8" }
# pallet-balances = { version = "2.0.0-alpha.2", path = "../balances" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-std/std",
    "polymesh-common-utilities/std",
    "polymesh-primitives/std",
    "polymesh-identity/std",
]
