[package]
name = "abi-gen"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false

[[bin]]
name = "abi-gen"
path = "main.rs"

[dependencies]
contract = { path = "../..", package = "PercentageTransferManager", default-features = false }
ink_metadata = { git = "https://github.com/paritytech/ink", rev = "c24f0ff999635ebcbfa69b4df1762b9808d86e79", package = "ink_metadata", default-features = false}
serde = "1.0"
serde_json = "1.0"